# salmon-rs

./: Cargo.toml  README.md  test
src/: error.rs  function.rs  interpreter.rs  lexer.rs  main.rs  object.rs  parser.rs  scope.rs  token.rs
src/ast/: ast.rs  expr.rs  stmt.rs
